# controller/subscriptionController.go
@@ -7,8 +7,18 @@ import (
 	"gobeacon/service"
 )
 
+// BuySubscription godoc
+// @Summary Совершение покупки подписки
+// @Description Покупка подписки для авторизованного пользователя и его связанных аккаунтов, в сумме не больше 5
+// @Accept json
+// @Produce json
+// @Param request body model.BuySubscriptionRequest true "Запрос на добавление подписки"
+// @Router /subscription/my/buy [post]
+// @Success 200 "ok"
+// @Failure 400 "err"
+// @Failure 500 "err"
+// @Tags Subscription
 func BuySubscription(c *gin.Context) {
-	//_ := getUserId(c)
 	req := model.BuySubscriptionRequest{UserId:getUserId(c)}
 	if e := c.Bind(&req); e != nil {
 		sendResponse([]int{code.ParseRequest}, c)
@@ -17,18 +27,45 @@ func BuySubscription(c *gin.Context) {
 	sendResponse(err, c)
 }
 
+// CurrentSubscription godoc
+// @Summary Текущая подписка
+// @Description Получить действующую подписку для пользователя
+// @Accept json
+// @Produce json
+// @Router /subscription/my/current [get]
+// @Success 200 "ok"
+// @Failure 500 "err"
+// @Tags Subscription
 func CurrentSubscription(c *gin.Context) {
 	userId := getUserId(c)
 	result, err := service.CurrentSubscription(userId)
 	sendObjResponse(result, err, c)
 }
 
+// AllActiveSubscription godoc
+// @Summary Подписки пользователя
+// @Description Подписки пользователя активная или те, которые будут активны в будущем
+// @Accept json
+// @Produce json
+// @Router /subscription/my/all [get]
+// @Success 200 "ok"
+// @Failure 500 "err"
+// @Tags Subscription
 func AllActiveSubscription(c *gin.Context) {
 	userId := getUserId(c)
 	result, err := service.AllActiveSubscription(userId)
 	sendObjResponse(result, err, c)
 }
 
+// Subscriptions godoc
+// @Summary Список подписок
+// @Description Список подписок доступных для покупки
+// @Accept json
+// @Produce json
+// @Router /subscription/available-buy [get]
+// @Success 200 "ok"
+// @Failure 500 "err"
+// @Tags Subscription
 func Subscriptions(c *gin.Context) {
 	result, err := service.Subscriptions()
 	sendObjResponse(result, err, c)
